--- a/osh/openstack/openstack-helm/Jenkinsfile
+++ b/osh/openstack/openstack-helm/Jenkinsfile
@@ -39,7 +39,7 @@ try{
                     extensions: [[$class: 'CleanBeforeCheckout']],
                     submoduleCfg: [],
                     userRemoteConfigs: [[refspec: 'refs/changes/*:refs/changes/*',
-                        url: 'https://git.openstack.org/openstack/openstack-helm']]]
+                        url: 'https://opendev.org/openstack/openstack-helm']]]
             }
             stage('Kubeadm-AIO') {
                 try {
