Add strace to review image for glance unit tests
Change-Id: Ibcc4bfce20eba25a0c7d4cd96f3d290c8d5c4621

--- a/images/code-review-image-build/Jenkinsfile
+++ b/images/code-review-image-build/Jenkinsfile
@@ -61,7 +61,8 @@ RUN apt-get update && \\
             libldap2-dev \\
             libsasl2-dev \\
             libssl-dev \\
-            libcurl4-openssl-dev
+            libcurl4-openssl-dev \\
+            strace
 RUN pip install --upgrade pip
 RUN pip install --no-cache-dir tox
 EOF"""
